-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 121105) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

????2005 (v2.4.4)  -** stable release **-
	- added: eiam - ai-describe, ao-describe, cop-describe and
	         ctrl-describe commands; see ecasound-iam(1)
	- added: ecasignalview - ability to pass ecasound options
		 -G, -B, -M*, -r and -z
	- changed: minor changes to ecaplay console output
	- changed: ECI C impl. - increased the time engine has
		   for processing ECI commands; fixes problems
		   with the 'cs-disconnect' command with complex
		   setups involving connections to external 
		   resources such as jackd
	- changed: error is raised if one tries to add chainops or 
		   controllers when multiple (or zero) chains are 
		   selected
	- fixed: compile-time bug in ecasignalview.cpp
	- fixed: saving chainsetups in cases where a ctrl is 
		 connected to a effect preset 
	- fixed: DBC_CHECK failure from eca-chainsetup.cpp when
	         running cs-edit on a non-connected chainsetup
	- fixed: bug in seeking mp3 files
	- fixed: eiam - 'c-select' caused a segfault if no chainsetup
		 was selected
	- fixed: -etf:0 caused a segfault
21082005 (v2.4.3)  -** stable release **-
	- added: support for ALSA sequencer support; see ecasound(1)
	         and examples.html [pedrolc]
	- added: runtime warning about possible problems when mixing 
		 resample and jack objects